Calendar visualization with events has been completed

--- a/app/src/main/res/values/strings_icons.xml
+++ b/app/src/main/res/values/strings_icons.xml
@@ -46,6 +46,7 @@
     <string name="material_icon_bookmark">&#xe921;</string>
     <string name="material_icon_bike">&#xe915;</string>
     <string name="material_icon_box_full">&#xe86b;</string>
+    <string name="material_icon_calendar">&#xe849;</string>
     <string name="material_icon_clock">&#xe881;</string>
     <string name="material_icon_close">&#xe887;</string>
     <string name="material_icon_check">&#xe867;</string>
