--- a/app/src/main/res/layout/medicapp_toolbar.xml
+++ b/app/src/main/res/layout/medicapp_toolbar.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
+    android:transitionName="@string/transition_toolbar"
     app:popupTheme="@style/AppTheme.PopupOverlay">
 
     <ImageView
