--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -39,6 +39,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/main_content_ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/event_toolbar_rl"
@@ -165,5 +166,19 @@
         </RelativeLayout>
 
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/edit_event_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/event_toolbar_rl"
+        android:layout_below="@+id/event_toolbar_rl"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="-22dp"
+        android:src="@drawable/icon_dark_edit"
+        app:fabSize="mini"/>
+
+    <include layout="@layout/progress_wheel_std"/>
 
 </RelativeLayout>
